# solar_cell_company_calculation

./: .gitignore  README.md  pyproject.toml
test_abraham/: hooks.py  modules.txt
test_abraham/base/: constants.py
test_abraham/fixtures/: role.json
test_abraham/solar_cell_company/doctype/customer/: customer.js  customer.json  customer.py  test_customer.py
test_abraham/solar_cell_company/doctype/power_consumption/: power_consumption.js  power_consumption.json  power_consumption.py  test_power_consumption.py
test_abraham/solar_cell_company/doctype/roi_calculation/: roi_calculation.js  roi_calculation.json  roi_calculation.py  test_roi_calculation.py
test_abraham/solar_cell_company/report/customer_average_consumption_report/: customer_average_consumption_report.js  customer_average_consumption_report.json  customer_average_consumption_report.py
test_abraham/utils/: helper_functions.py
